# learning-cpp-sdl

./: CMakeLists.txt  README.md
.zed/: settings.json  tasks.json
assets/: p16x16.map
assets/MapAssets/: map.map
sdl-sample/: .clang-format  .clangd  .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
sdl-sample.xcodeproj/: project.pbxproj
sdl-sample.xcodeproj/xcuserdata/macbook.xcuserdatad/xcschemes/: xcschememanagement.plist
sdl-sample/.zed/: settings.json
sdl-sample/src/: Collision.cpp  Collision.hpp  Components.hpp  ECS.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  Vector2D.cpp  Vector2D.hpp  main.cpp
sdl-sample/src/ECS/: ColliderComponent.hpp  Components.hpp  ECS.cpp  ECS.hpp  KeyboardController.hpp  PositionComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp
src/: AssetManager.cpp  AssetManager.hpp  Collision.cpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  Vector2D.cpp  Vector2D.hpp  main.cpp
src/ECS/: Animation.hpp  ColliderComponent.hpp  ECS.cpp  ECS.hpp  KeyboardController.hpp  PlayerComponent.hpp  ProjectileComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp
